# rust-verkle

./: .gitignore  Cargo.toml  Readme.md  readme.md
.github/scripts/: compile_all_targets_java.sh  install_all_targets.sh
.github/workflows/: java-publish.yml  release-java-bindings.yml  rust.yml
banderwagon/: Cargo.toml  readme.md
banderwagon/benches/: benchmark.rs
banderwagon/docs/: 1-understand-banderwagon-high-level.md  2-understand-banderwagon-twisted-edwards.md  3-understand-banderwagon-point-halving.md
banderwagon/src/: element.rs  lib.rs  msm.rs  msm_strauss.rs  msm_windowed_sign.rs  trait_impls.rs
banderwagon/src/trait_impls/: from_to_bytes.rs  ops.rs  serialise.rs
before_async/criterion/insert 10k/0/base/: benchmark.json  estimates.json
before_async/criterion/insert 10k/0/change/: estimates.json
before_async/criterion/insert 10k/0/new/: raw.csv  sample.json  tukey.json
before_async/criterion/insert 10k/0/report/: index.html
before_async/criterion/insert 10k/100000/base/: benchmark.json  estimates.json  tukey.json
before_async/criterion/insert 10k/100000/change/: estimates.json
before_async/criterion/insert 10k/100000/new/: raw.csv  sample.json
before_async/criterion/insert 10k/100000/report/: index.html
before_async/criterion/insert 10k/200000/base/: benchmark.json  raw.csv
before_async/criterion/insert 10k/200000/change/: estimates.json
before_async/criterion/insert 10k/200000/new/: estimates.json  sample.json  tukey.json
before_async/criterion/insert 10k/200000/report/: index.html
before_async/criterion/insert 10k/300000/base/: benchmark.json
before_async/criterion/insert 10k/300000/change/: estimates.json
before_async/criterion/insert 10k/300000/new/: estimates.json  raw.csv  sample.json  tukey.json
before_async/criterion/insert 10k/300000/report/: index.html
before_async/criterion/insert 10k/400000/base/: benchmark.json
before_async/criterion/insert 10k/400000/change/: estimates.json
before_async/criterion/insert 10k/400000/new/: estimates.json  raw.csv  sample.json  tukey.json
before_async/criterion/insert 10k/400000/report/: index.html
before_async/criterion/insert 10k/report/: index.html
before_async/criterion/precomputed scalar mul/base/: benchmark.json  raw.csv  sample.json  tukey.json
before_async/criterion/precomputed scalar mul/change/: estimates.json
before_async/criterion/precomputed scalar mul/new/: estimates.json
before_async/criterion/precomputed scalar mul/report/: index.html
before_async/criterion/proof 10k/report/: index.html
before_async/criterion/report/: index.html
benches/: benchmark_main.rs  my_benchmark.rs
benches/benchmarks/: bls.rs  edit_10k.rs  insert.rs  insert_10k.rs  kzg.rs  mod.rs  proof_10k.rs  util.rs
bindings/c/: Cargo.toml
bindings/c/src/: lib.rs
bindings/csharp/csharp_code/: Verkle.sln
bindings/csharp/csharp_code/Verkle.Bindings/: RustVerkle.cs  Verkle.Bindings.csproj  native_methods.g.cs  native_methods.loading.cs
bindings/csharp/rust_code/: Cargo.toml  build.rs
bindings/csharp/rust_code/src/: lib.rs
bindings/java/: README.md
bindings/java/java_code/: .gitignore  build.gradle  settings.gradle
bindings/java/rust_code/: Cargo.toml  build.rs  verkle_cryptography_LibIpaMultipoint.h
bindings/java/rust_code/src/: errors.rs  lib.rs  parsers.rs  utils.rs
ffi_interface/: Cargo.toml
ffi_interface/src/: interop.rs  lib.rs  serialization.rs
ipa-multipoint/: Cargo.toml  LICENSE  Readme.md
ipa-multipoint/benches/: benchmark_main.rs
ipa-multipoint/benches/benchmarks/: ipa_prove.rs  ipa_verify.rs  mod.rs  multipoint_prove.rs  multipoint_verify.rs
ipa-multipoint/docs/: 1-vcs-high-level.md  2-vcs-multipoint-arg.md  3-vcs-divide-lagrange-basis  3-vcs-divide-lagrange-basis.md
ipa-multipoint/src/: committer.rs  crs.rs  default_crs.rs  ipa.rs  lagrange_basis.rs  lib.rs  main.rs  math_utils.rs  multiproof.rs  transcript.rs
ipa-multipoint/src/committer/: precompute.rs  test.rs
scripts/: check_if_rustup_target_installed.sh  compile.sh  compile_to_native.sh
src/: bench.rs  commitment.rs  db.rs  hash.rs  interop.rs  lib.rs  main.rs  main_old.rs  point_encoding.rs  transcript.rs  util.rs
src/interop/: encoding_interop.rs  hash_interop.rs  kzg_interop.rs  leaf_interop.rs  proof_interop.rs  verkle_interop.rs
src/kzg10/: commitment.rs  errors.rs  key.rs  key_lagrange.rs  mod.rs  opening_key.rs  precomp_lagrange.rs  proof.rs  srs.rs
src/kzg10/commit_key_coeff/: mod.rs  ruffini.rs  schemes.rs  srs.rs
src/kzg10/commit_key_coeff/schemes/: multi_point.rs  multi_poly.rs  single.rs
src/kzg10/commit_key_lag/: key_lagrange.rs  mod.rs  schemes.rs  srs.rs
src/kzg10/commit_key_lag/lagrange/: mod.rs
src/kzg10/commit_key_lag/schemes/: multi_point.rs  multi_poly.rs  single.rs
src/kzg10/lagrange/: mod.rs
src/trie/: indexer.rs  mod.rs
src/trie/node/: children.rs  empty.rs  errors.rs  hashed.rs  internal.rs  leaf.rs  mod.rs
src/trie/verkle/: indexer.rs  mod.rs  verkle_find_path.rs  verkle_get.rs  verkle_insert.rs
src/verkle/: mod.rs
verkle-db/: Cargo.toml
verkle-db/src/: lib.rs  rocksdb_impl.rs  sled_impl.rs
verkle-ffi/: Cargo.toml
verkle-ffi/src/: lib.rs
verkle-spec/: Cargo.toml
verkle-spec/assets/: devnet6_genesis.json
verkle-spec/src/: code.rs  header.rs  lib.rs  parameters.rs  storage.rs  util.rs
verkle-spec/tests/: devnet6.rs
verkle-trie/: Cargo.toml
verkle-trie/benches/: benchmark_main.rs
verkle-trie/benches/benchmarks/: insert_10k.rs  mod.rs  multipoint.rs  precompute_scalar_mul.rs  proof_10k.rs  proof_ipa.rs  util.rs
verkle-trie/src/: byte_arr.rs  committer.rs  config.rs  constants.rs  database.rs  errors.rs  from_to_bytes.rs  lib.rs  main.rs  precompute.rs  proof.rs  to_bytes.rs  trie.rs  trie_fuzzer.rs
verkle-trie/src/committer/: precompute.rs  test.rs
verkle-trie/src/database/: default.rs  generic.rs  memory_db.rs  meta.rs
verkle-trie/src/proof/: golang_proof_format.rs  key_path_finder.rs  opening_data.rs  prover.rs  stateless_updater.rs  verifier.rs
verkle-trie/tests/: golang_interop.rs  trie_fuzzer.rs
(+175 files in other folders)
