[package]
name = "verkle_trie"
version = "0.1.0"
authors = ["Kevaundray Wedderburn <kevtheappdev@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.10.0"
bitvec = "0.21.1"
ark-ff = { version = "0.2", default-features = false }
ark-poly = { version = "0.2", default-features = false }
ark-serialize = { version = "0.2", default-features = false }
ark-bls12-381 = { version = "0.2", default-features = false, features = ["curve"] }
thiserror = "1.0.24"
rand_core = { version = "0.5", features = ["getrandom"] }
rand = "0.8.3"
rand_chacha = { version = "0.3.0", default-features = false }
rayon = { version = "1.3" }

sha2 = "0.9.3"
ark-ec = { version = "0.2", default-features = false }

merlin = "3.0.0"
hex = "0.4.3"
slotmap = { version = "1.0.2", features = ["serde"] }
once_cell = "1.7.2"
num-bigint = "0.4"

criterion = "0.3.4"

[dependencies.num-traits]
version = "0.2.11"
default-features = false
features = ["i128"]

[dev-dependencies]

[profile.bench]
debug = true
inline-threshold = 0
opt-level = 3
debug-assertions = true
incremental = true
[profile.release]
opt-level = 3
debug = true
inline-threshold = 0
debug-assertions = true
incremental = true

[[bench]]
name = "my_benchmark"
harness = false


[profile.test]
opt-level = 3
debug-assertions = true
incremental = true
debug = true

[features]
default = ["parallel"]
parallel = ["ark-ff/parallel", "ark-poly/parallel", "ark-ec/parallel"]
