[workspace]

members = [
    "verkle-db",
    "verkle-trie",
    "verkle-spec",
    "ipa-multipoint",
    "banderwagon", "ffi_interface",
]
resolver = "2"

[profile.bench]
debug = true
opt-level = 3
debug-assertions = true
incremental = true

[profile.release]
opt-level = 3
debug = true
debug-assertions = true
incremental = true


[profile.test]
opt-level = 3
debug-assertions = true
incremental = true
debug = true
