[workspace]

members = [
    "verkle-db",
    "verkle-trie",
    "verkle-spec",
    "ipa-multipoint",
    "banderwagon",
    "ffi_interface",
    "bindings/c",
    "bindings/java/rust_code",
    "bindings/csharp/rust_code",
]
resolver = "2"

[workspace.package]
authors = ["Kevaundray Wedderburn <kev@the.dev>"]
edition = "2021"
license = "MIT"
version = "0.0.1"
rust-version = "1.70"
repository = "https://github.com/crate-crypto/rust-verkle"

[profile.bench]
debug = true
opt-level = 3
debug-assertions = true
incremental = true

[profile.release]
opt-level = 3
debug = true
debug-assertions = true
incremental = true


[profile.test]
opt-level = 3
debug-assertions = true
incremental = true
debug = true
