[package]
name = "ffi_interface"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
banderwagon = { path = "../banderwagon" }
ipa-multipoint = { path = "../ipa-multipoint" }
verkle-spec = { path = "../verkle-spec" }
hex = "*"
verkle-trie = { path = "../verkle-trie" }
