[package]
name = "verkle-db"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sled = "0.34.6"
rocksdb = { version = "0.17", features = ["snappy"], default-features = false }

[dev-dependencies]
tempfile = "3.2.0"
