[package]
name = "verkle-spec"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ethereum-types = "0.14.1"
verkle-trie = { path = "../verkle-trie" }
hex = "*"
ipa-multipoint = { path = "../ipa-multipoint" }

# This is needed for serialization in get_tree_key_hash
# TODO: we may need to put `fr_to_le_bytes` and then ffi_interface
# TODO: and this crate will use the same method
banderwagon = { path = "../banderwagon" }
