[package]
name = "verkle-spec"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ethereum-types = "0.14.1"
verkle-trie = { path = "../verkle-trie" }
hex = "*"
ipa-multipoint = { path = "../ipa-multipoint" }

# This is needed for serialization in get_tree_key_hash
# TODO: we may need to put `fr_to_le_bytes` and then ffi_interface
# TODO: and this crate will use the same method
banderwagon = { path = "../banderwagon" }

[dev-dependencies]
anyhow = "1.0.83"
ark-serialize = { version = "^0.4.2", default-features = false }
keccak-hash = "0.10.0"
once_cell = "1.19.0"
serde = "1.0.202"
serde_json = "1.0.117"
