[package]
name = "verkle-trie"
authors = ["Kevaundray Wedderburn <kevtheappdev@gmail.com>"]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
tempfile = "3.2.0"
thiserror = "1.0"
ipa-multipoint = { path = "../ipa-multipoint" }
banderwagon = { path = "../banderwagon" }
verkle-db = { path = "../verkle-db", default-features = false }
once_cell = "1.8.0"
hex = "0.4.3"
rand_chacha = { version = "0.3.0", default-features = false }
rayon = "1.5.1"
smallvec = "1.6.1"
sha2 = "0.9.3"
itertools = "0.10.1"
# serde is needed to deserialize the execution witness in the block.
# Most of these elements should be opaque, but the golang code
# exposes them.
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
criterion = "0.5.1"
tempfile = "3.2.0"

[[bench]]
name = "benchmark_main"
harness = false
