[package]
name = "java_verkle_cryptography"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
rust-version = { workspace = true }
repository = { workspace = true }


[dependencies]
banderwagon = { path = "../../../banderwagon" }
ipa-multipoint = { path = "../../../ipa-multipoint" }
verkle-spec = { path = "../../../verkle-spec" }
verkle-trie = { path = "../../../verkle-trie" }
ffi_interface = { path = "../../../ffi_interface" }

jni = { version = "0.21.1", features = [
    "invocation",
] } # We use invocation in tests.
hex = "0.4.3"
num-bigint = "0.4.4"
once_cell = "1.19.0"

[lib]
crate-type = ["cdylib"]
